"feat: añadido encabezado (h1) y menu de navegacion (nav)"

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>El Runti</title>
 </head>
 <body>
-    
+    <header>
+    <h1>El Runti</h1>
+    <nav>
+        <ul>
+        <li><a href="#inicio">Inicio</a></li>
+        <li> <a href="#Sobre_el">Sobre el</a></li>
+        <li><a href="#Musica">Musica</a></li>
+        </ul>
+    </nav>
+    </header>
 </body>
 </html>
