"feat: agrega imagen de El Runti en la section y organiza el proyecto en carpetas src/img"

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <main id="inicio">
   <section>
     <article>
+        <img src="src/img/el_runti.png" alt="Fotografia de El Runti en Spotify" width="300">
          <h2>¿Conoces a El Runti?</h2>
          <p><strong>El Runti</strong> es un artista emergente que permanecio en el anonimato hace mucho tiempo, el cual sus proyectos han quedado estancados por falta de creatividad y tiempo dedicado,
          el amor por la musica electronica y todos sus subgeneros lo ha llevado a crear sus propias canciones para subir el animo en una fiesta o rave, el gusto por ser DJ tambien lo motiva mucho a seguir practicando tanto en la produccion musical y en la mezcla de la musica. Su mas grande sueño es 
