"feat: agrega sección de música con imágenes y enlaces a canciones RNA y Portal"

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <nav>
         <ul>
         <li><a href="#inicio">Inicio</a></li>
-        <li> <a href="#Sobre_el">Sobre el</a></li>
         <li><a href="#Musica">Musica</a></li>
+        <li> <a href="#Mezclas">Mezclas</a></li>
         </ul>
     </nav>
     </header>
@@ -26,6 +26,19 @@
          llegar a ecenarios mundiales como el <a href="https://www.santandersmusic.com/magazine/festivales/tomorrowland#:~:text=Tomorrowland%20es%20un%20festival%20de,impresionantes%20escenarios%20y%20narrativas%20%C3%BAnicas.">Tomorrowland</a>
          o algo mas local como el <a href="https://mexico.electricdaisycarnival.com/">EDC Mexico.</a></p>
     </article>
+    <section id="Musica">
+        <h2>Canciones de <strong>El Runti</strong></h2>
+        <div class="grid">
+            <a href="https://soundcloud.com/el-runti/rna?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">
+                <img src="src/img/rna_cancion.jpg" alt="Cancion RNA Autor El Runti" width="300" class="cancion_imagen">
+            </a>
+            <p><strong>RNA</strong></p>
+            <a href="https://open.spotify.com/intl-es/track/1nBfciMdVQJAvY9DpeHTkX?si=cf1d491f80cd4bd5">
+                <img src="src/img/portal_cancion.jpg" alt="Cancion Portal Autor El Runti" width="300" class="cancion_imagen">
+            </a>
+            <p><strong>Portal</strong></p>
+        </div>
+    </section>
 </main>
 </body>
 </html>
