--- a/index.html
+++ b/index.html
@@ -38,7 +38,21 @@
             </a>
             <p><strong>Portal</strong></p>
         </div>
-    </section>
-</main>
+        <section id="Mezclas">
+            <h2>Mezclas de canciones</h2>
+            <div class="grid">
+                <a href="https://www.youtube.com/watch?v=yZszg9nEFbE" target="_blank">
+                    <img src="src/img/BadBunnyVideo.png" alt="BAD BUNNY MIX" width="300" class="mezcla-img">
+                </a>
+                <p><strong>BAD BUNNY MIX</strong></p>
+            </div>
+            <div class="mezcla-card">
+                <a href="https://www.youtube.com/watch?v=xa8MbFF1o9Y" target="_blank">
+                    <img src="src/img/SetMusicaVideo.png" alt="SET DE MUSICA ELECTRONICA" width="300" class="mezcla-img">
+                </a>
+                <p><strong>SET DE MUSICA ELECTRONICA</strong></p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
