"fix: corrige estructura de etiquetas y agrega footer con redes sociales"

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,6 +26,7 @@
          llegar a ecenarios mundiales como el <a href="https://www.santandersmusic.com/magazine/festivales/tomorrowland#:~:text=Tomorrowland%20es%20un%20festival%20de,impresionantes%20escenarios%20y%20narrativas%20%C3%BAnicas.">Tomorrowland</a>
          o algo mas local como el <a href="https://mexico.electricdaisycarnival.com/">EDC Mexico.</a></p>
     </article>
+  </section>
     <section id="Musica">
         <h2>Canciones de <strong>El Runti</strong></h2>
         <div class="grid">
@@ -38,6 +39,7 @@
             </a>
             <p><strong>Portal</strong></p>
         </div>
+    </section>
         <section id="Mezclas">
             <h2>Mezclas de canciones</h2>
             <div class="grid">
@@ -54,5 +56,11 @@
             </div>
         </section>
     </main>
+    <footer>
+  <p>© 2025 El Runti | Sígueme en 
+    <a href="https://instagram.com/elrunti">Instagram</a>, 
+    <a href="https://youtube.com/@elrunti">YouTube</a>
+  </p>
+</footer>
 </body>
 </html>
