"style: aplica diseño al header, reorganiza divs y se acomoda mejor el codigo "

--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
 </head>
 <body>
     <header>
-    <h1>El Runti</h1>
-    <nav>
-        <ul>
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#Musica">Musica</a></li>
-        <li> <a href="#Mezclas">Mezclas</a></li>
-        </ul>
-    </nav>
+        <div class="header_menu">
+            <h1>El Runti</h1>
+            <nav>
+                <ul>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#Musica">Musica</a></li>
+                    <li> <a href="#Mezclas">Mezclas</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 <main id="inicio">
   <section>
-    <article>
+        <div class="grid">
         <img src="src/img/el_runti.png" alt="Fotografia de El Runti en Spotify" width="300">
+        <article>
          <h2>¿Conoces a El Runti?</h2>
          <p><strong>El Runti</strong> es un artista emergente que permanecio en el anonimato hace mucho tiempo, el cual sus proyectos han quedado estancados por falta de creatividad y tiempo dedicado,
          el amor por la musica electronica y todos sus subgeneros lo ha llevado a crear sus propias canciones para subir el animo en una fiesta o rave, el gusto por ser DJ tambien lo motiva mucho a seguir practicando tanto en la produccion musical y en la mezcla de la musica. Su mas grande sueño es 
          llegar a ecenarios mundiales como el <a href="https://www.santandersmusic.com/magazine/festivales/tomorrowland#:~:text=Tomorrowland%20es%20un%20festival%20de,impresionantes%20escenarios%20y%20narrativas%20%C3%BAnicas.">Tomorrowland</a>
          o algo mas local como el <a href="https://mexico.electricdaisycarnival.com/">EDC Mexico.</a></p>
+         </div>
     </article>
   </section>
     <section id="Musica">
