--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@
     <a href="https://youtube.com/@elrunti">YouTube</a>
   </p>
 </footer>
+<script src="src/script.js"></script>
 </body>
 </html>
