"feat: agrega checkbox para alternar entre modo claro y oscuro"

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                     <li> <a href="#Mezclas">Mezclas</a></li>
                 </ul>
             </nav>
+            <label class="modo-toggle">
+                <input type="checkbox" id="modoClaro">
+                Modo claro
+            </label>
         </div>
     </header>
 <main id="inicio">
