--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
+      <link rel="shortcut icon" href="src/icon/favicon.png">
     <title>El Runti</title>
 </head>
 <body>
